Update dependencies, use DTOs for controller requests and improve opening book