@@ -1,13 +1,14 @@
 package chess.api.pieces;
 
 import chess.api.PieceConfiguration;
-import com.google.common.collect.ImmutableMap;
+
+import java.util.Map;
 
 public class Rook extends Piece {
 
     private static final int[][] DIRECTIONAL_LIMITS = {{0, -1, 7}, {-1, 0, 7}, {1, 0, 7}, {0, 1, 7}};
 
-    private static final ImmutableMap<Integer, Integer> CASTLE_POSITION_MAPPINGS = ImmutableMap.of(0, 2, 7, 6, 56, 58, 63, 62);
+    private static final Map<Integer, Integer> CASTLE_POSITION_MAPPINGS = Map.of(0, 2, 7, 6, 56, 58, 63, 62);
 
     public static final String AN_CODE = "R";
 
